corrected bottom scrollbar

--- a/assets/stylesheets/style.css
+++ b/assets/stylesheets/style.css
@@ -1,6 +1,7 @@
 html {
   height: 100%;
-  width: 100%;
+  width: 110%;
+  overflow-x: hidden;
 }
 
 body, html {
